update resume and small tweaks

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             made them mostly in wordpress earlier. But this one for example is
             all my design.
           </p>
-          <h4>Three fast facts</h4>
+          <h3>Three fast facts</h3>
           <ul>
             <li>Love animals, but am allergic.</li>
             <li>Favorite color is a <span id="blue">deep royal blue.</span></li>
@@ -127,39 +127,45 @@
         </article>
         <article class="col-12 col-md-6 col-xl-6 p-3" id="resume">
           <h2>Resume</h2>
-          <h5>Studies</h5>
-          <p>
-            <b>Medieinstitutet</b> <i>2022-2024</i> <br />
-            Front End Developer<br />
-            <b>NTI</b> <i>2020</i><br />
-            Redovisning 2<br />
-            Näthandel 1<br />
-            <b>NTI</b> <i>2018</i><br />
-            Grafisk Illustration i vektorgrafik<br />
-            <b>MiRoi</b> <i>2018</i><br />
-            Grafisk Illustration<br />
-            <b>CentrumförLivsLångtLärande</b> <i>2017</i><br />
-            <u>Yrkesutbildning - Grafisk formgivning</u><br />
-            Grafisk kommunikation 1<br />
-            Grafisk kommunikation 2<br />
-            Digitalt skapande 1<br />
-            Digitalt skapande 2<br />
-          </p>
+          <h3>Studies</h3>
+          <h6><u>Medieinstitutet</u> <i>2022-2024</i></h6>
+          <ul class="resumelist">
+            <li>Front End Developer</li>
+          </ul>
+          <h6><u>NTI</u> <i>2020</i></h6>
+          <ul class="resumelist">
+            <li>Redovisning 2</li>
+            <li>Näthandel 1</li>
+          </ul>
+          <h6><u>NTI</u> <i>2018</i></h6>
+          <ul class="resumelist">
+            <li>Grafisk Illustration i vektorgrafik</li>
+          </ul>
+          <h6><u>MiRoi</u> <i>2018</i></h6>
+          <ul class="resumelist">
+            <li>Grafisk Illustration</li>
+          </ul>
+          <h6><u>CentrumförLivsLångtLärande</u> <i>2017</i></h6>
+          <ul class="resumelist">
+            <li>Grafisk kommunikation 1</li>
+            <li>Grafisk kommunikation 2</li>
+            <li>Digitalt skapande 1</li>
+            <li>Digitalt skapande 2</li>
+          </ul>
         </article>
         <article class="col-12 col-md-6 col-xl-6 p-3">
-          <h5>Work</h5>
+          <h3>Work</h3>
+          <h6><b>Graphic designer and founder</b> at Cruwa design</h6>
+          <i>2020-06</i>
           <p>
-            <b>Cruwa design- Graphic designer and founder</b><br />
-            <i>2020-06</i><br />
             I am designing for both prints and stickers. The stickers is made
             for planning purposes and are designed, printed and cut by me. The
             designs for print is uploaded to a dropshipping site. Since it is my
             business I am also doing administrative work.
           </p>
+          <h6><b>Barista</b> at Espresso House</h6>
+          <i>2016-2017</i>
           <p>
-            <b>Espresso House- Barista</b><br />
-            <i>2016-2017 Tyresö & Stockholm</i><br />
-            <i>2017-2017 Nässjö</i><br />
             As a barista I never had a dull moment at work. It doesnt sound like
             a hard job, but you never stand still nor do one thing at the time.
             You are at the cashregistry, taking orders, making coffee (and other
