--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- bootstrap -->
+    <!-- bootstrap css, js, icon -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +27,9 @@
     <title>CW Portfolio</title>
   </head>
   <body>
+    <!-- header -->
     <header class="fixed-top">
+      <!-- navigation -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <section class="container-fluid">
           <a class="navbar-brand" href="/index.html">Carolina Warntorp</a>
@@ -45,10 +47,7 @@
           >
             <ul class="navbar-nav text-end">
               <li class="nav-item">
-                <a class="nav-link" href="#presentation">Presentation</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#showcase">Showcase</a>
+                <a class="nav-link" href="#about_me">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#resume">Resume</a>
@@ -62,11 +61,16 @@
       </nav>
     </header>
 
+    <!-- main container -->
     <main class="container-fluid gx-3">
-      <section class="row justify-content-around">
-        <article class="col-12 vh-100 d-flex flex-column" id="presentation">
-          <h1 class="text-center fw-bolder" id="hello">Hello and Welcome!</h1>
-          <h2>Name: Carolina</h2>
+      <section class="row justify-content-around p-3">
+        <!-- about me -->
+        <article
+          class="col-12 col-xl-7 vh-100 d-flex flex-column"
+          id="about_me"
+        >
+          <h2 class="text-center fw-bolder" id="hello">Hello and Welcome!</h2>
+          <h3>Name: Carolina</h3>
           <p>
             I am 30 years old and live with my husband and daughter. I have a
             business were I make stickers to use when you plan. It has been a
@@ -77,29 +81,20 @@
             made them mostly in wordpress earlier. But this one for example is
             all my design.
           </p>
-          <h3>Three fast facts</h3>
+          <h4>Three fast facts</h4>
           <ul>
             <li>Love animals, but am allergic.</li>
             <li>Favorite color is a <span id="blue">deep royal blue.</span></li>
             <li>Me and my mom share birthday.</li>
           </ul>
-          <section class="mt-auto card m-4 mx-auto">
+          <!-- card -->
+          <section class="mt-auto card m-5 mx-auto">
             <section class="card-body">
               <h5 class="card-title">Intrested?</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-                maxime minus, distinctio dolorum ex eligendi doloremque sunt,
-                pariatur quam vel deleniti. Ullam earum natus nulla cum soluta
-                quia porro repellendus!
-              </p>
-              <section class="card-footer d-flex justify-content-evenly">
+              <p class="card-text">Connect with me!</p>
+              <footer class="card-footer d-flex justify-content-evenly">
                 <a href="https://github.com/Carowa27" title="Github; Carowa27"
                   ><i class="bi bi-github"></i
-                ></a>
-                <a
-                  href="https://www.instagram.com/think.round/"
-                  title="Instagram; ThinkRound"
-                  ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/in/carolina-warntorp-7b965311b/"
@@ -107,88 +102,154 @@
                   ><i class="bi bi-linkedin"></i
                 ></a>
                 <a
-                  href="mailto: carolina.warntorp@medieinstitutet.se"
+                  href="https://www.instagram.com/think.round/"
+                  title="Instagram; ThinkRound"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+                <a
+                  href="mailto:carolina.warntorp@medieinstitutet.se"
                   title="Email me"
                   ><i class="bi bi-envelope-fill"></i
                 ></a>
-              </section>
+              </footer>
             </section>
           </section>
         </article>
-        <article class="col-12 col-md-7 col-xl-7 p-3" id="showcase">
-          <h2>Showcase</h2>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, illo
-          ducimus. Eligendi nesciunt quo numquam perferendis, quia dicta
-          deserunt quisquam non architecto a expedita provident vitae odio,
-          harum cupiditate placeat.
-        </article>
-        <article class="col-12 col-md-6 col-xl-5 p-3 v-75" id="img">
-          <h2>Img to come</h2>
-        </article>
-        <article class="col-12 col-md-6 col-xl-6 p-3" id="resume">
-          <h2>Resume</h2>
-          <h3>Studies</h3>
-          <h6><u>Medieinstitutet</u> <i>2022-2024</i></h6>
-          <ul class="resumelist">
-            <li>Front End Developer</li>
-          </ul>
-          <h6><u>NTI</u> <i>2020</i></h6>
-          <ul class="resumelist">
-            <li>Redovisning 2</li>
-            <li>Näthandel 1</li>
-          </ul>
-          <h6><u>NTI</u> <i>2018</i></h6>
-          <ul class="resumelist">
-            <li>Grafisk Illustration i vektorgrafik</li>
-          </ul>
-          <h6><u>MiRoi</u> <i>2018</i></h6>
-          <ul class="resumelist">
-            <li>Grafisk Illustration</li>
-          </ul>
-          <h6><u>CentrumförLivsLångtLärande</u> <i>2017</i></h6>
-          <ul class="resumelist">
-            <li>Grafisk kommunikation 1</li>
-            <li>Grafisk kommunikation 2</li>
-            <li>Digitalt skapande 1</li>
-            <li>Digitalt skapande 2</li>
-          </ul>
-        </article>
-        <article class="col-12 col-md-6 col-xl-6 p-3">
-          <h3>Work</h3>
-          <h6><b>Graphic designer and founder</b> at Cruwa design</h6>
-          <i>2020-06</i>
-          <p>
-            I am designing for both prints and stickers. The stickers is made
-            for planning purposes and are designed, printed and cut by me. The
-            designs for print is uploaded to a dropshipping site. Since it is my
-            business I am also doing administrative work.
+        <!-- showcase -->
+        <aside
+          class="row col-12 col-md-6 col-xl-5 align-items-center pt-4 vh-100"
+          id="showcase"
+        >
+          <img
+            src="/assets/Profile_square.jpg"
+            alt="bild"
+            class="img-fluid showcase_img p-5 h-50"
+          /><img
+            src="/assets/Profile_square.jpg"
+            alt="bild"
+            class="img-fluid showcase_img p-5 h-50"
+          />
+        </aside>
+        <!-- resume -->
+        <section id="resume" class="row min-vh-100 p-5">
+          <article class="col-12 col-md-6 col-xl-6 p-3">
+            <h2><i>Resume</i></h2>
+            <h3>Studies</h3>
+            <p><u>Medieinstitutet</u> <i>2022-2024</i></p>
+            <ul class="resumelist">
+              <li>Front End Developer</li>
+            </ul>
+            <p><u>NTI</u> <i>2020</i></p>
+            <ul class="resumelist">
+              <li>Redovisning 2</li>
+              <li>Näthandel 1</li>
+            </ul>
+            <p><u>NTI</u> <i>2018</i></p>
+            <ul class="resumelist">
+              <li>Grafisk Illustration i vektorgrafik</li>
+            </ul>
+            <p><u>MiRoi</u> <i>2018</i></p>
+            <ul class="resumelist">
+              <li>Grafisk Illustration</li>
+            </ul>
+            <p><u>CentrumförLivsLångtLärande</u> <i>2017</i></p>
+            <ul class="resumelist">
+              <li>Grafisk kommunikation 1</li>
+              <li>Grafisk kommunikation 2</li>
+              <li>Digitalt skapande 1</li>
+              <li>Digitalt skapande 2</li>
+            </ul>
+          </article>
+          <article class="col-12 col-md-6 col-xl-6 pt-5 p-3">
+            <h3>Work</h3>
+            <p><b>Graphic designer and founder</b> at Cruwa design</p>
+            <i>2020-06</i>
+            <p>
+              I am designing for both prints and stickers. The stickers is made
+              for planning purposes and are designed, printed and cut by me. The
+              designs for print is uploaded to a dropshipping site. Since it is
+              my business I am also doing administrative work.
+            </p>
+            <p><b>Barista</b> at Espresso House</p>
+            <i>2016-2017</i>
+            <p>
+              As a barista I never had a dull moment at work. It doesnt sound
+              like a hard job, but you never stand still nor do one thing at the
+              time. You are at the cashregistry, taking orders, making coffee
+              (and other drinks), fetching dishes, filling and emptying the
+              dishwasher, wiping tables, filling the shelves, empying trashcans,
+              prepping food and pastries, cleaning mashines, receiving
+              deliveries and so on. Always with a smile on the lips and a
+              helping hand ready!
+            </p>
+          </article>
+        </section>
+        <!-- megaphone -->
+        <figure
+          class="col-3 col-md-5 col-xl-5 d-flex justify-content-center align-items-center"
+          id="img"
+        >
+          <p class="px-5 m-0 d-lg-flex d-none d-sm-none">
+            <i class="bi bi-megaphone-fill megaphone"></i>
           </p>
-          <h6><b>Barista</b> at Espresso House</h6>
-          <i>2016-2017</i>
-          <p>
-            As a barista I never had a dull moment at work. It doesnt sound like
-            a hard job, but you never stand still nor do one thing at the time.
-            You are at the cashregistry, taking orders, making coffee (and other
-            drinks), fetching dishes, filling and emptying the dishwasher,
-            wiping tables, filling the shelves, empying trashcans, prepping food
-            and pastries, cleaning mashines, receiving deliveries and so on.
-            Always with a smile on the lips and a helping hand ready!
+          <p class="px-5 m-0 d-sm-flex d-lg-none">
+            <i class="bi bi-megaphone-fill megaphone_mini"></i>
           </p>
-        </article>
-        <article class="col-12 col-md-7 col-xl-7 p-3" id="contact_me">
-          <h2>Contact me</h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-          molestiae velit, nulla voluptatibus tempore excepturi quae asperiores.
-          Tempore explicabo eaque incidunt nisi temporibus reiciendis quaerat
-          numquam, placeat quasi qui saepe?
-        </article>
-        <article class="col-12 col-md-5 col-xl-5 p-3" id="img">
-          <h2>Img to come</h2>
+        </figure>
+        <!-- contact me -->
+        <article
+          class="col-9 col-md-7 col-xl-7 p-3 d-flex flex-column justify-content-between"
+          id="contact_me"
+        >
+          <p class="contact">Contact me</p>
+          <a
+            href="https://github.com/Carowa27"
+            title="Github; Carowa27"
+            class="no_underline"
+            ><i
+              class="bi bi-github contact_icon d-none d-sm-none d-lg-inline-block"
+            >
+            </i
+            ><span class="contact_link"> Github; Carowa27</span></a
+          >
+          <a
+            href="https://www.linkedin.com/in/carolina-warntorp-7b965311b/"
+            title="LinkedIn Profile"
+            class="no_underline"
+            ><i
+              class="bi bi-linkedin contact_icon d-none d-sm-none d-lg-inline-block"
+            >
+            </i
+            ><span class="contact_link"> LinkedIn; Carolina Warntorp</span></a
+          >
+          <a
+            href="https://www.instagram.com/think.round/"
+            title="Instagram; ThinkRound"
+            class="no_underline"
+            ><i
+              class="bi bi-instagram contact_icon d-none d-sm-none d-lg-inline-block"
+            >
+            </i
+            ><span class="contact_link"> Instagram; ThinkRound</span></a
+          >
+          <a
+            href="mailto:carolina.warntorp@medieinstitutet.se"
+            title="Email me"
+            class="no_underline"
+            ><i
+              class="bi bi-envelope-fill contact_icon d-none d-sm-none d-lg-inline-block"
+            >
+            </i
+            ><span class="contact_link">
+              Email; Carolina.Warntorp@<wbr />medieinstitutet.se</span
+            ></a
+          >
         </article>
       </section>
+      <!-- footer -->
       <footer class="row">
-        <article class="col-12 text-center" id="footer">
-          Carolina Warntorp &copy;
+        <article class="col-12 text-center py-2" id="footer">
+          Carolina Warntorp &copy; 2022
         </article>
       </footer>
     </main>
