--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </ul>
           <!-- card -->
           <section class="mt-auto card m-5 mx-auto">
-            <er class="card-body">
+            <section class="card-body">
               <h5 class="card-title">Intrested?</h5>
               <p class="card-text">Connect with me!</p>
               <section class="card-text d-flex justify-content-evenly p-0 m-0">
