--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- navigation -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <section class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Carolina</a>
+          <a class="navbar-brand highlight" href="/index.html">Carolina</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -47,13 +47,13 @@
           >
             <ul class="navbar-nav text-end">
               <li class="nav-item">
-                <a class="nav-link" href="#about_me">About me</a>
+                <a class="nav-link highlight" href="#about_me">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#resume">Resume</a>
+                <a class="nav-link highlight" href="#resume">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact_me">Contact me</a>
+                <a class="nav-link highlight" href="#contact_me">Contact me</a>
               </li>
             </ul>
           </section>
@@ -93,27 +93,27 @@
             <section class="card-body">
               <h5 class="card-title">Intrested?</h5>
               <p class="card-text">Connect with me!</p>
-              <section class="card-text d-flex justify-content-evenly p-0 m-0">
+              <p class="card-text d-flex justify-content-evenly">
                 <a href="https://github.com/Carowa27" title="Github; Carowa27"
-                  ><i class="bi bi-github"></i
+                  ><i class="bi bi-github highlight"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/in/carolina-warntorp-7b965311b/"
                   title="LinkedIn Profile"
-                  ><i class="bi bi-linkedin"></i
+                  ><i class="bi bi-linkedin highlight"></i
                 ></a>
                 <a
                   href="mailto:carolina.warntorp@medieinstitutet.se"
                   title="Email me"
-                  ><i class="bi bi-envelope-fill"></i
+                  ><i class="bi bi-envelope-fill highlight"></i
                 ></a>
-              </section>
+              </p>
             </section>
           </section>
         </article>
         <!-- showcase -->
         <aside
-          class="row col-12 col-lg-5 align-items-center pt-4 vh-100 d-lg-flex d-none d-sm-none"
+          class="row col-12 col-lg-5 align-items-center pt-4 m-0 vh-100 d-lg-flex d-none d-sm-none"
           id="showcase"
         >
           <img
@@ -213,30 +213,32 @@
             title="Github; Carowa27"
             class="no_underline"
             ><i
-              class="bi bi-github contact_icon d-none d-sm-none d-md-inline-block"
+              class="bi bi-github contact_icon d-none d-sm-none d-md-inline-block highlight"
             >
             </i
-            ><span class="contact_link"> Github; Carowa27</span></a
+            ><span class="contact_link highlight"> Github; Carowa27</span></a
           >
           <a
             href="https://www.linkedin.com/in/carolina-warntorp-7b965311b/"
             title="LinkedIn Profile"
             class="no_underline"
             ><i
-              class="bi bi-linkedin contact_icon d-none d-sm-none d-md-inline-block"
+              class="bi bi-linkedin contact_icon d-none d-sm-none d-md-inline-block highlight"
             >
             </i
-            ><span class="contact_link"> LinkedIn; Carolina Warntorp</span></a
+            ><span class="contact_link highlight">
+              LinkedIn; Carolina Warntorp</span
+            ></a
           >
           <a
             href="mailto:carolina.warntorp@medieinstitutet.se"
             title="Email me"
             class="no_underline"
             ><i
-              class="bi bi-envelope-fill contact_icon d-none d-sm-none d-md-inline-block"
+              class="bi bi-envelope-fill contact_icon d-none d-sm-none d-md-inline-block highlight"
             >
             </i
-            ><span class="contact_link">
+            ><span class="contact_link highlight">
               Email; Carolina.Warntorp@<wbr />medieinstitutet.se</span
             ></a
           >
